--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </nav>
     <div class="all-code-container">
 
-        <table class="table table-responsive-sm">
+        <table class="table">
             <thead>
                 <tr>
                 <th scope="col">#</th>
