--- a/Confessors.html
+++ b/Confessors.html
@@ -13,21 +13,22 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/Confessors.css">
     <link rel="stylesheet" href="styles/components.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <title>Confessors</title>
 </head>
 <body>
     
     <nav class="NAVBR-SECTION">
         <ul class="navbars">
-            <a href=""><i class="fa-solid fa-house"></i></a>
-            <a href=""><i class="fa-solid fa-person"></i></a>
-            <a href=""><i class="fa-solid fa-house"></i></a>
+            <a href=""><img src="icons8-home-25.png" alt=""></a>
+            <a href=""><img src="icons8-birthday-25.png" alt=""></a>
+            <a href=""><img src="icons8-meeting-time-28.png"></a>
+            <a href=""><img src="icons8-queue-25.png" alt=""></a>
         </ul>
     </nav>
     <div class="all-code-container">
 
-        <table class="table table-responsive-sm">
+        <table class="table">
             <thead>
                 <tr>
                 <th scope="col">#</th>
