--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
             <a href=""><img src="icons8-birthday-25.png" alt=""></a>
             <a href=""><img src="icons8-meeting-time-28.png"></a>
             <a href=""><img src="icons8-queue-25.png" alt=""></a>
+            <a href=""><img src="icons8-add-user-male-25.png" alt=""></a>
         </ul>
     </nav>
     <div class="all-code-container">
+
 
         <table class="table">
             <thead>
