--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
     <main class="centered-section">
       <div class="content-box">
         <div class="head">
-          <h1>MY CONFESSIONS</h1>
+          <h1>My Confession</h1>
         </div>
         
         <form action="" method="post">
-          <div class="search-box">
-            <input type="text" placeholder="Enter confession code" />
+          <div class="CF-box">
+            <input type="text" placeholder="CF-Code" />
             <button>Submit</button>
           </div>
         </form>
@@ -52,7 +52,7 @@
           <textarea placeholder="Write your notes here..."></textarea>
         </div>
         <div class="verse-box">
-          <p class="paragraph-effect">
+          <p class="">
             "هكَذَا فَلْيَحْسِبْنَا الإِنْسَانُ كَخُدَّامٍ لِلْمَسِيحِ، وَوُكَلَاءَ سَرَائِرِ اللهِ."
             <span class="verse-ref">(كورنثوس الأولى 4:1)</span>
           </p>
