--- a/index.html
+++ b/index.html
@@ -48,15 +48,17 @@
           </div>
         </form>
 
-        <div class="note-box">
-          <textarea placeholder="Write your notes here..."></textarea>
-        </div>
-        <div class="verse-box">
-          <p class="">
-            "هكَذَا فَلْيَحْسِبْنَا الإِنْسَانُ كَخُدَّامٍ لِلْمَسِيحِ، وَوُكَلَاءَ سَرَائِرِ اللهِ."
-            <span class="verse-ref">(كورنثوس الأولى 4:1)</span>
-          </p>
-        </div>
+<div class="chart-container">
+  <canvas id="myPieChart"></canvas>
+</div>
+
+
+        <p class="verse-text">
+          هكَذَا فَلْيَحْسِبْنَا الإِنْسَانُ كَخُدَّامٍ لِلْمَسِيحِ، وَوُكَلَاءَ سَرَائِرِ اللهِ
+          <span class="verse-ref">(كورنثوس الأولى 4:1)</span><br>
+        </p>
+
+    
       </div>
     </main>
 
@@ -65,5 +67,53 @@
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script>
+  const ctx = document.getElementById('myPieChart').getContext('2d');
+
+  const myPieChart = new Chart(ctx, {
+    type: 'pie',
+    data: {
+      labels: ['عدد الاعترافات', 'عدد المخدومين', 'رموز مستخدمة', 'آخر تحديث'],
+      datasets: [{
+        data: [24, 12, 19, 1],
+        backgroundColor: [
+          '#413d62',
+          '#5a5591',
+          '#87ceeb',
+          '#9ad0f5'
+        ],
+        borderColor: '#ffffff',
+        borderWidth: 2
+      }]
+    },
+    options: {
+      responsive: true,
+      plugins: {
+        legend: {
+          position: 'bottom',
+          labels: {
+            color: '#333',
+            font: {
+              family: 'Poppins',
+              size: 14
+            }
+          }
+        },
+        tooltip: {
+          callbacks: {
+            label: function(context) {
+              const label = context.label || '';
+              const value = context.parsed || 0;
+              return `${label}: ${value}`;
+            }
+          }
+        }
+      }
+    }
+  });
+</script>
+
 </body>
 </html>
