--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/7/71/Coptic_cross.svg">
 
   <!-- FONTS -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,8 +26,8 @@
           <a href="#"><i class="fas fa-home"></i></a>
           <a href="#"><i class="fa-solid fa-clock"></i></a>
           <a href="#"><i class="fa-solid fa-cake-candles"></i></a>
-          <a href="#"><i class="fas fa-user-group"></i></a>
-          <a href="#"><i class="fa-solid fa-user-plus"></i></a>
+          <a href="Usre.html"><i class="fas fa-user-group"></i></a>
+          <a href="newserved.html"><i class="fa-solid fa-user-plus"></i></a>
         </ul>
       </div>
     </nav>
@@ -48,9 +49,9 @@
           </div>
         </form>
 
-<div class="chart-container">
-  <canvas id="myPieChart"></canvas>
-</div>
+        <div class="chart-container">
+          <canvas id="myPieChart"></canvas>
+        </div>
 
 
         <p class="verse-text">
