--- a/Usre.html
+++ b/Usre.html
@@ -23,11 +23,11 @@
     <nav class="nav-links">
       <div>
         <ul class="navbars">
-          <a href="#"><i class="fas fa-home"></i></a>
+          <a href="index.html"><i class="fas fa-home"></i></a>
           <a href="#"><i class="fa-solid fa-clock"></i></a>
           <a href="#"><i class="fa-solid fa-cake-candles"></i></a>
-          <a href="#"><i class="fas fa-user-group"></i></a>
-          <a href="#"><i class="fa-solid fa-user-plus"></i></a>
+          <a href="Usre.html"><i class="fas fa-user-group"></i></a>
+          <a href="newserved.html"><i class="fa-solid fa-user-plus"></i></a>
         </ul>
       </div>
     </nav>
