--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <nav class="nav-links">
       <div>
         <ul class="navbars">
-          <a href="#"><i class="fas fa-home"></i></a>
+          <a href="#"><i class="fas fa-home active"></i></a>
           <a href="#"><i class="fa-solid fa-clock"></i></a>
           <a href="#"><i class="fa-solid fa-cake-candles"></i></a>
           <a href="Usre.html"><i class="fas fa-user-group"></i></a>
@@ -47,6 +47,7 @@
             <input type="text" placeholder="CF-Code" />
             <button>Submit</button>
           </div>
+          
         </form>
 
         <div class="chart-container">
