--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
 </head>
 
 <body>
-  <header class="top-navbar">
-    <nav class="nav-links">
-      <div>
-        <ul class="navbars">
-          <a href="#"><i class="fas fa-home active"></i></a>
-          <a href="#"><i class="fa-solid fa-clock"></i></a>
-          <a href="#"><i class="fa-solid fa-cake-candles"></i></a>
-          <a href="Usre.html"><i class="fas fa-user-group"></i></a>
-          <a href="newserved.html"><i class="fa-solid fa-user-plus"></i></a>
-        </ul>
-      </div>
-    </nav>
-  </header>
+<header class="top-navbar">
+  <nav class="nav-links">
+    <div>
+      <ul class="navbars">
+        <a href="#" class="links active"><i class="fas fa-home"></i></a>
+        <a href="#" class="links "><i class="fa-solid fa-clock"></i></a>
+        <a href="#" class="links"><i class="fa-solid fa-cake-candles"></i></a>
+        <a href="Usre.html" class="links"><i class="fas fa-user-group"></i></a>
+        <a href="newserved.html" class="links"><i class="fa-solid fa-user-plus"></i></a>
+      </ul>
+    </div>
+  </nav>
+</header>
   <div class="all-code-container ">
 
     
