--- a/servedinfo.html
+++ b/servedinfo.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>PROFILE</title>
     <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/7/71/Coptic_cross.svg">
-     <link rel="stylesheet" href="style/servedinfo.css">
+     <link rel="stylesheet" href="styles/servedinfo.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
 <body>
