--- a/newserved.html
+++ b/newserved.html
@@ -30,11 +30,11 @@
     <nav class="nav-links">
       <div>
         <ul class="navbars">
-          <a href="#" class="links"><i class="fas fa-home"></i></a>
+          <a href="index.html" class="links"><i class="fas fa-home"></i></a>
           <a href="#" class="links "><i class="fa-solid fa-clock"></i></a>
           <a href="#" class="links"><i class="fa-solid fa-cake-candles"></i></a>
           <a href="Usre.html" class="links"><i class="fas fa-user-group"></i></a>
-          <a href="newserved.html" class="links"><i class="fa-solid fa-user-plus"></i></a>
+          <a href="newserved.html" class="links active"><i class="fa-solid fa-user-plus"></i></a>
         </ul>
       </div>
     </nav>
