--- a/Usre.html
+++ b/Usre.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="styles/components.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <title>Confessors</title>
+
 </head>
 <body>
 
@@ -23,7 +24,7 @@
     <nav class="nav-links">
       <div>
         <ul class="navbars">
-          <a href="index.html" class="links"><i class="fas fa-home"></i></a>
+          <a href="#" class="links active"><i class="fas fa-home"></i></a>
           <a href="#" class="links "><i class="fa-solid fa-clock"></i></a>
           <a href="#" class="links"><i class="fa-solid fa-cake-candles"></i></a>
           <a href="Usre.html" class="links"><i class="fas fa-user-group"></i></a>
@@ -33,93 +34,66 @@
     </nav>
   </header>
 
-  <div class="all-code-container">
 
-    
-    <div class="d-flex justify-content-between align-items-center mb-4">
-      <h3>Confessors</h3>
-      <div class="d-flex gap-2">
-        <input type="text" class="form-control" placeholder="Search..." id="searchInput">
-        <button class="btn btn-outline-primary"><i class="fas fa-filter"></i> Filter</button>
+  <div class="all-code-container">
+   <div class="container mt-4">
+      <div class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center mb-3">
+        <h2 class="mb-2 mb-md-0 text-center">All Served 📖</h2>
+        <span id="confessorsCount" class="badge badge-pill badge-primary p-2 px-3">
+        TOTAL :  
+        </span>
+      </div>
+    </div>
+    <div class="d-flex flex-row flex-wrap align-items-center mb-4 justify-content-between">
+      <!-- Search Input -->
+      <div class="mr-2 mb-2 flex-grow-1">
+        <input type="text" class="form-control" placeholder="Search confessors..." id="searchInput">
+      </div>
+
+      <!-- Dropdown without label -->
+      <div class="mb-2" style="min-width: 20px;">
+        <select class="custom-select" id="statusFilter">
+          <option value="all" selected>All</option>
+          <option value="active">Active</option>
+          <option value="offline">Offline</option>
+        </select>
       </div>
     </div>
 
-    <div class="table-responsive shadow-sm rounded bg-white">
-      <table class="table table-hover align-middle mb-0">
-        <thead class="table-light">
-          <tr>
-            <th>Users</th>
-            <th>Status</th>
-            <th>Email</th>
-            <th>Date</th>
-            <th class="text-end">Actions</th>
-          </tr>
-        </thead>
-        <tbody id="userTable">
-          <tr>
-            <td>
-              <div class="table-avatar">
-                <img src="https://i.imgur.com/U0Zr6zH.png" class="avatar" alt="">
-                <div>
-                  <div class="fw-semibold">Jane Cooper</div>
-                  <small class="text-muted">@jane</small>
-                </div>
-              </div>
-            </td>
-            <td><span class="status-badge status-active">Active</span></td>
-            <td>jessica.hanson@example.com</td>
-            <td>5/27/15</td>
-            <td class="text-end">
-              <button class="btn btn-sm btn-outline-primary me-1"><i class="fas fa-edit"></i></button>
-              <button class="btn btn-sm btn-outline-danger"><i class="fas fa-trash-alt"></i></button>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <div class="table-avatar">
-                <img src="https://i.imgur.com/1X8zWbF.png" class="avatar" alt="">
-                <div>
-                  <div class="fw-semibold">Wade Warren</div>
-                  <small class="text-muted">@wade456</small>
-                </div>
-              </div>
-            </td>
-            <td><span class="status-badge status-offline">Offline</span></td>
-            <td>willie.jennings@example.com</td>
-            <td>5/19/12</td>
-            <td class="text-end">
-              <button class="btn btn-sm btn-outline-primary me-1"><i class="fas fa-edit"></i></button>
-              <button class="btn btn-sm btn-outline-danger"><i class="fas fa-trash-alt"></i></button>
-            </td>
-          </tr>
-          <!-- Add more rows as needed -->
-        </tbody>
-      </table>
-    </div>
 
-    <!-- Pagination -->
-    <nav class="mt-4 d-flex justify-content-center">
-      <ul class="pagination">
-        <li class="page-item disabled"><a class="page-link" href="#">01</a></li>
-        <li class="page-item active"><a class="page-link" href="#">02</a></li>
-        <li class="page-item"><a class="page-link" href="#">03</a></li>
-        <li class="page-item"><a class="page-link" href="#">04</a></li>
-      </ul>
-    </nav>
+
+    <div class="card-list" id="userCards">
+      <div class="user-card">
+        <img src="https://i.imgur.com/U0Zr6zH.png" alt="">
+        <div class="user-info">
+          <h6>Jane Cooper</h6>
+        </div>
+        <div class="actions">
+          <button><i class="fas fa-edit"></i></button>
+          <button><i class="fas fa-trash-alt text-danger"></i></button>
+        </div>
+      </div>
+
+      <div class="user-card">
+        <img src="https://i.imgur.com/1X8zWbF.png" alt="">
+        <div class="user-info">
+          <h6>Wade Warren</h6>
+        </div>
+        <div class="actions">
+          <button><i class="fas fa-edit"></i></button>
+          <button><i class="fas fa-trash-alt text-danger"></i></button>
+        </div>
+      </div>
+    </div>
+  
 
   </div>
 
-<!-- Bootstrap JS Bundle -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-<!-- Filter Script -->
-<script>
-  document.getElementById("searchInput").addEventListener("input", function () {
-    const value = this.value.toLowerCase();
-    document.querySelectorAll("#userTable tr").forEach(row => {
-      row.style.display = row.innerText.toLowerCase().includes(value) ? "" : "none";
-    });
-  });
-</script>
+  <!-- <footer>
+    All rights reserved &copy; <span id="year"></span> Eng. FADI & MARINA
+  </footer> -->
+
+
 </body>
 </html>
