--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <title>Confessors</title>
 </head>
-
 <body>
   <header class="top-navbar">
     <nav class="nav-links">
@@ -39,7 +38,7 @@
     <main class="centered-section">
       <div class="content-box">
         <div class="head">
-          <h1>My Confession</h1>
+          <h1>My Confession ✝️</h1>
         </div>
         
         <form action="" method="post">
