--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <a href="#" class="links active"><i class="fas fa-home"></i></a>
           <a href="#" class="links "><i class="fa-solid fa-clock"></i></a>
           <a href="#" class="links"><i class="fa-solid fa-cake-candles"></i></a>
-          <a href="Usre.html" class="links"><i class="fas fa-user-group"></i></a>
+          <a href="user.html" class="links"><i class="fas fa-user-group"></i></a>
           <a href="newserved.html" class="links"><i class="fa-solid fa-user-plus"></i></a>
         </ul>
       </div>
@@ -37,8 +37,8 @@
     <!-- Centered Content -->
     <main class="centered-section">
       <div class="content-box">
-        <div class="head">
-          <h1>My Confession ✝️</h1>
+        <div class="head text-center">
+          <h1>My Confession 🕊️</h1>
         </div>
         
         <form action="" method="post">
