--- a/newserved.html
+++ b/newserved.html
@@ -46,7 +46,7 @@
 
       <div class="form-container">
         <form>
-          <h2>Service Registration</h2>
+          <h2>Service Registration 🙋‍♂️</h2>
   
           <div class="form-group">
             <label for="fullname">Full Name</label>
