--- a/servedinfo.html
+++ b/servedinfo.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>PROFILE</title>
-    <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/7/71/Coptic_cross.svg">
-     <link rel="stylesheet" href="styles/servedinfo.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>PROFILE</title>
+  <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/7/71/Coptic_cross.svg">
+  <link rel="stylesheet" href="styles/servedinfo.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
 <body>
-    
-     <!-- Navbar -->
-    <header class="top-navbar">
-    <div class="logo">PROFILE</div>
+
+  <!-- Navbar -->
+  <header class="top-navbar">
+    <div class="logo">👤 Profile</div>
     <nav class="nav-links">
       <a href="Home.html"><i class="fas fa-home"></i></a>
       <a href="checklist.html"><i class="fas fa-chart-pie"></i></a>
@@ -21,26 +21,22 @@
     </nav>
   </header>
 
-<!-- Profile Section -->
-<div class="profile-container">
-<div class="profile-image">
-  <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Profile Photo">
+  <!-- Profile Section -->
+  <div class="profile-container">
+    <div class="profile-image">
+      <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Profile Photo">
+    </div>
 
-</div>
-
-  <div class="profile-info">
-    <p><strong>Name:</strong> FADI 3MAD </p>
-    <p><strong>Age:</strong> 20</p>
-    <p><strong>Gender:</strong> Male</p>
-    <p><strong>Birthdate:</strong> 2-4-2005</p>
-    <p><strong>Job:</strong> Engineer</p>
-    <p><strong>Service Type:</strong> Sunday School</p>
-    <p><strong>Last Visit :</strong> 5-7-2025</p>
+    <div class="profile-info">
+      <p><i class="fas fa-user"></i><strong>Name:</strong> FADI 3MAD</p>
+      <p><i class="fas fa-calendar-day"></i><strong>Age:</strong> 20</p>
+      <p><i class="fas fa-venus-mars"></i><strong>Gender:</strong> Male</p>
+      <p><i class="fas fa-birthday-cake"></i><strong>Birthdate:</strong> 2-4-2005</p>
+      <p><i class="fas fa-briefcase"></i><strong>Job:</strong> Engineer</p>
+      <p><i class="fas fa-church"></i><strong>Service Type:</strong> Sunday School</p>
+      <p><i class="fas fa-clock"></i><strong>Last Visit:</strong> 5-7-2025</p>
+    </div>
   </div>
-</div>
-
-
- 
 
 </body>
 </html>
